--- a/4R.md
+++ b/4R.md
@@ -9,7 +9,7 @@ csl: /Users/dborus/Desktop/chicago-fullnote-bibliography.csl
 
   In his second novel, *Giovanni's Room* (1956), James Baldwin has his narrator-protagonist David muse on why he lit out suddenly for Europe. David did so, he reflects, for the peculiarly American reason that he “wanted to find myself.” He notes regards that phrase is neither current “in the language of any other people” and “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.”[@baldwin1956, p. 39]The sojourn to the Old World does little to render David’s desires, inclinations, and capacities legible or stable. Unable to accept his homosexual longings, particularly for the titular character whom he abandons after Giovanni's conviction for murder, David remains alienated from his reflection in the mirror, uncertain of “what moves in this body” and for “what this body is searching"(189).
 
-Contemporaries criticized both the novel's unapologetic treatment of homosexuality and its failure to chronicle black life. Charges of decadence and elitism obscured the book’s place in Baldwin’s career-long contention that whites’ demonization of blacks originated in the former’s inability to know themselves. Baldwin was far from alone in his belief that postwar American society made it difficult for Americans to know reliably who they were. Postwar commentators characteristically noted the presence of such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values.  For some the problem lay with the absence of meaningful communities and interpersonal relations brought on by modernity writ large. Others blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools, the media, and the isolation of suburban family life.[On alienation and isolation, see @josephson1962. For popular criticisms of suburbs, bureaucracy, and advertising respectively, seeJohn Keats, *The Crack in the Picture Window* (Boston: Houghton Mifflin, 1957); @whyte1956; and  @packard1957.]
+Contemporaries criticized both the novel's unapologetic treatment of homosexuality and its failure to chronicle black life. Charges of decadence and elitism obscured the book’s place in Baldwin’s career-long contention that whites’ demonization of blacks originated in the former’s inability to know themselves. Baldwin was far from alone in his belief that postwar American society made it difficult for Americans to know reliably who they were. Postwar commentators characteristically noted the presence of such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values.  For some the problem lay with the absence of meaningful communities and interpersonal relations brought on by modernity writ large. Others blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools, the media, and the isolation of suburban family life.[On alienation and isolation, see @josephson1962. For popular criticisms of suburbs, bureaucracy, and advertising respectively, see John Keats, *The Crack in the Picture Window* (Boston: Houghton Mifflin, 1957); @whyte1956; and  @packard1957.]
 
 Postwar concern about the insubstantiality of selves quickly assumed a political cast. Arguing material and objective causes did not explain popular support for Fascist and Communist regimes, analysts turned to psychosocial abnormalities. Erich Fromm's *Escape from Freedom* (1941), Theodor Adorno's *Authoritarian Personality* (1950), philosopher Jacob Talmon’s *Origins of Totalitarian Democracy* (1952), and Hannah Arendt's *Origin of Totalitarianism* (1958) all attributed totalitarian success to the ability of ruling groups to manipulate unfulfilled psychological needs. Although fascist and communist ideologies had little appeal to most Americans, many commentators nonetheless worried that a society of anomic individuals who lacked internalized standards were fodder for poseurs and demagogues. That possibility no doubt fanned an interest in Tocqueville's argument that democracy produced citizens who sought safety i a culture of stifling uniformity and who were capable of massing against those who were distinctive or different.[@mcclay1994 contains a useful summary of the tendency to explain political phenomena by psycho-social factors.] Augmenting the theoretical work of the social critics was that of social psychologists Solomon Asch and Stanley Milgram, who obtained results that suggested most individuals lacked the psychological assuredness to resist a relentless majority or a demanding, unfeeling authority. Asch (1951, 1956) observed that subjects more often than not acceded to the group truth, even when it countered their own perceptions. For his part, Milgram discovered that most people would continue to punish others when ordered to do so. There was, many observers concluded a "Good German" in all of us.[The pertinent studies are @asch1951; @asch1956; and @milgram1963. For a discussion of the implications for the social psychology of postwar politics, see Israel Charny, *Fascism and Democracy in the Human Mind: A Bridge between Mind and Society* (Lincoln: University of Nebraska Press, 2006)]
 
@@ -65,19 +65,17 @@ Squaring her recognition of biological difference with her hope for a more flexi
 
 Mead's talk of flexibility in gender relations made *Male and Female* different from different from the widely circulated anti-feminist tract *Modern Woman: The Lost Sex* (1947) by Ferdinand Lundberg and Marynia Farnham, despite their common  insistence on female docility and the essential nature of mother love. Lundberg and Farnham's screed excoriated American women for their unnatural abandonment of motherhood and domestic life -- two roles for which they were suited. Influenced by the feminist movement and war-time employment, American women no longer found satisfaction in child-bearing. As mothers, they tended to be rejecting, overprotective, domineering, or over-affectionate. Any of the four types were responsible neurotic and unhappy children, which Lundberg and Farnham estimated constituted one fourth to one third of the population.[@lundberg1947]
 
-Lundberg and Farnham frequently claimed the mantle of Freud, but both psychoanalysts and Neo-Freudians found their work simplistic.[See @zaretsky2000, p. 338-41] At issue in postwar debates over the uses of Freud was the nature of the energy provided by drives or impulses and how modifiable they were by social institutions. Freud’s understanding of the formation of the self had matured over the course of his career, but a fairly constant portion was libido theory. In it, Freud held that *trieb* (alternatively translated as “drives” or “instinct”) were fundamentally sexual in nature. The energy focuses on different zones at different moments in an individual’s childhood. Should it become fixated on certain parts, psychopathology would arise. Drives are relentless and fundamentally antisocial, leading to efforts to regulate them. This regulation could be conscious (suppression), unconscious (repression through internalization of social prohibitions and norms), or channeled (sublimation). Freud envisioned the individual as continually at odds with him or herself, yet capable of some forms of psychic health by using the energy of the drives for work and love.[See, among others, Robert Waelder, *Basic Theory of Psychoanalysis* (New York: Shocken Books, 1960); @lear2005; and @sulloway1979]
+Lundberg and Farnham small part of a larger conversation of the meaning and applicability of Freud. A more pitched debate took place between orthodox and neo-Freudians over the degree to which social institutions could shape, change, or cancel bodily impulses. Freud’s understanding of the formation of the self had matured over the course of his career, but a fairly constant portion was libido theory. In it, Freud held that *trieb* (alternatively translated as “drives” or “instinct”) were fundamentally sexual in nature. The energy focuses on different zones at different moments in an individual’s childhood. Should it become fixated on certain parts, psychopathology would arise. Drives are relentless and fundamentally antisocial, leading to efforts to regulate them. This regulation could be conscious (suppression), unconscious (repression through internalization of social prohibitions and norms), or channeled (sublimation). Freud envisioned the individual as continually at odds with him or herself, yet capable of some forms of psychic health by using the energy of the drives for work and love.[See, among others, Robert Waelder, *Basic Theory of Psychoanalysis* (New York: Shocken Books, 1960); @lear2005; and @sulloway1979]
 
 Although revisionists accepted Freud’s notion of a depth psychology in which unconscious motivation--retrievable through dreams, fantasies, and slips--accounted for external behavior, they rejected the libido theory. Such analysts as Erik Erikson, Karen Horney, Harry Stack Sullivan, and Erich Fromm challenged the exclusive concentration on the erotic, Freud’s hydraulic conception of energy that limited the amount available to an individual, and the orthodox assertion of the universality of Oedipal conflict. Revisionists charged that empirical evidence was lacking for all these propositions. Others criticized Freud’s version of female sexuality in which girls transfer desire from mother to father and yearn for a penis as incoherent. At bottom, they objected to a view of biological endowment as unalterable and proposed instead a view in which the self under the impress of nature and society was more variable, dynamic, and contingent.[^22]
 
-[^22]: Much of the psychological justification for neo-Freudianism can be found in Karen Horney, *The Neurotic Personality of Our Time* (New York: Norton, 1937) and Harry Stack Sullivan, *The Interpersonal Theory of Psychiatry* (New York: Norton, 1953).
+[^22]: See Erich Fromm and Rainer Funk, *Beyond Freud: From Individual to Social Psychoanalysis* (Riverdale, NY: American Mental Health Foundation Books, 2010); Karen Horney, *The Neurotic Personality of Our Time* (New York: Norton, 1937); and Harry Stack Sullivan, *The Interpersonal Theory of Psychiatry* (New York: Norton, 1953).
 
-With its emphasis on social context rather than biologically-based drives, revisionism opened the possibility of connecting psychological development to political change. Most notable in this regard was Erich Fromm, who discerned commonalities between Freud and Marx. “Different as they were, they have in common an uncompromising will to liberate man, an equally uncompromising faith in truth as the instrument of liberation and the belief that the condition for this liberation lies in man's capacity to break the chain of illusion.”[@fromm1962, p. 18] In Fromm’s synthesis, dynamic psychology provided the mechanism by which social existence gave rise to consciousness while historical materialism contributed an etiology to why certain character types predominated at different times in human history. Fromm believed libidinal theory could not convincingly explain why a particular social class featured a particular character type. It was unlikely, he thought, that every petit bourgeois had anal fixations. If the human instinctual apparatus was not infinitely malleable, it nonetheless changed in response to the historical problems it faced. Fromm’s revisionism was most apparent in his view of the family as the conduit of historical context through the particular bodily and psychic gratification structure. As long as it bestowed the proper rewards, the family would give rise to the typical character type. Should families cease to deliver rewards, the stage was set for new character types and social change.[^24]
+With its emphasis on social context rather than biologically-based drives, revisionism opened the possibility of connecting psychological development to political change. Most notable in this regard was Erich Fromm, who discerned commonalities between Freud and Marx. “Different as they were, they have in common an uncompromising will to liberate man, an equally uncompromising faith in truth as the instrument of liberation and the belief that the condition for this liberation lies in man's capacity to break the chain of illusion.”[@fromm1962, p. 18] In Fromm’s synthesis, dynamic psychology provided the mechanism by which social existence gave rise to consciousness while historical materialism contributed an etiology to why certain character types predominated at different times in human history. Fromm believed libidinal theory could not convincingly explain why a particular social class featured a particular character type. It was unlikely, he thought, that every petit bourgeois had anal fixations. If the human instinctual apparatus was not infinitely malleable, it nonetheless changed in response to the historical problems it faced. Fromm’s revisionism was most apparent in his view of the family as the conduit of historical context through the particular bodily and psychic gratification structure. As long as it bestowed the proper rewards, the family would give rise to the typical character type. Should families cease to deliver rewards, the stage was set for new character types and social change.[@friedman2013]
 
-[^24]: Fromm puts forth the argument in various forms in [@fromm1941]; [@fromm1947]; and Erich Fromm, and Rainer Funk, *Beyond Freud: From Individual to Social Psychoanalysis* (Riverdale, N.Y.: American Mental Health Foundation Books, 2010).
+If Fromm jettisoned orthodoxy for radical ends, others hewed to it for similar reasons. Although the analytic establishment used Freud to secure patient adjustment to normal social life, thinkers diverse as Herbert Marcuse, Lionel Trilling, and the sociologist Dennis Wrong glimpsed in Freudian libido theory the possibility of true opposition to the political and social status quo. They held that the drives did *not* set the self forever but opened possibilities for overturning social convention. Revisionists had treated nature as a form of determinism, but their work relied on what Wrong termed the oversocialized conception of man (sic). By positing social and cultural causation activated by an ingrained need for approval, revisionism turned out at bottom to be a theory of conformity in which rebels were incompletely socialized.[@wrong1961] Freud himself was dismissive of social revolution, but his conception of the self caught between drive and internalized social restriction was a portrait of a person in struggle. For defenders of libido theory, that struggle could result in the redirection of instincts for  nonconformist ends. Literary critic Lionel Trilling valued Freud for his portrait of the self bathed in but struggling against culture. The various biological imperatives enabled the Freudian self to move beyond conformity and an all-controlling culture, especially if the culture demanded reasonableness and uniformity of manner as was the case for postwar America. That biology could underwrite a different kind of conformity was less worrying to Trilling in the 1950s when culture seemed so demanding than it was to the neo-Freudians and it would be to subsequent liberals. [@trilling1955, particularly 38-58]
 
-If Fromm jettisoned orthodoxy for radical ends, others hewed to it for similar reasons. Although the analytic establishment used Freud to secure patient adjustment to normal social life, thinkers diverse as Herbert Marcuse, Lionel Trilling, and the sociologist Dennis Wrong glimpsed in Freudian libido theory the possibility of true opposition to the political and social status quo. They held that the drives did *not* set the self forever but opened possibilities for overturning social convention. Revisionists had treated nature as a form of determinism, but their work relied on what Wrong termed the oversocialized conception of man (sic). By positing social and cultural causation activated by an ingrained need for approval, revisionism turned out at bottom to be a theory of conformity in which rebels were incompletely socialized.[@wrong1961] Freud himself was dismissive of social revolution, but his conception of the self caught between drive and internalized social restriction was a portrait of a person in struggle. Aware that the manifestation of instincts was not fixed, defenders of the libido theory envisioned ways that redirected instincts could aid nonconformist ends. Literary critic Lionel Trilling championed the biological substratum that remained beyond conformity to culture. By viewing the self as struggling against its culture, Trilling's Freud presented a way that individuals could stand outside culture. That biology could underwrite a different kind of conformity was less worrying to Trilling in the 1950s when culture seemed so demanding than it was to the neo-Freudians and it would be to subsequent liberals. [@trilling1955, particularly 38-58]
-
-Trilling, especially in his later career, included Freud's death drive as part of humanity's biological equipment, a sense that human's tended toward stasis, even destruction, which prevented him from embracing Utopian visions. Not so, the Marxist philosopher Marcuse, who treated the unleashing of eros as an attack on capitalist society’s conversion of sex energy into alienated labor. “The irreconcilable conflict is not between work (reality principle) and Eros (pleasure principle), but between alienated labour (performance principle) and Eros,” Marcuse proclaimed.[@marcuse1955, p. 47] Marcuse's rejection of neo-Freudianism led him to flirt with the non-Marxist position that bodily pleasure the sole measure of meaningful selfhood, underplaying the contributions of Enlightenment reason. A fear that American culture might co-opt the supposedly liberated aspects of instinctual life later led Marcuse to advance the idea of repressive desublimation in *One-Dimensional Man* (1964). As Marcuse saw it, by allowing, encouraging, and commodifying instant gratification, capitalist society drained energies that could be used in opposition. Ostensible liberation turned out to bolster the prevailing order.
+Trilling included Freud's death drive, which posited humans tendency toward stasis and even destruction, as part of humanity's biological equipment. That drive ruled out Utopian visions. On this point the Marxist philosopher Marcuse demurred, reckoning that the unleashing of eros would break down capitalist society’s conversion of sex energy into alienated labor. “The irreconcilable conflict is not between work (reality principle) and Eros (pleasure principle), but between alienated labour (performance principle) and Eros,” Marcuse proclaimed.[@marcuse1955, p. 47] Marcuse's celebration of Eros to the exclusion of reason led him to flirt with the non-Marxist position that bodily pleasure was the sole measure of meaningful selfhood. Only later did he realize the degree to which American culture might co-opt the supposedly liberating aspects of instinctual life. That realization resulted in his famous concept of repressive sublimation in *One-Dimensional Man* (1964), which maintained that by allowing, encouraging, and commodifying instant gratification, capitalist society drained energies that could be used in opposition and bolster the prevailing order.
 
 Although most debate revolved around how the body determined identity, there were instances where self and body became unconnected and revealed how plastic gender behavior could be. Some were played for fun, as in Billy Wilder’s film *Some Like It Hot* (1959), in which Jack Lemmon and Tony Curtis dress and live as women to escape gangsters. Others, such as the case of Christine Jorgensen went to the heart of body and identity. Although born with a penis, George William Jorgensen felt early on as a child that she was a woman trapped in a man’s body. Although psychoanalysts regarded such a condition as a mental illness, the result of improper identification with the properly sexed parent during early childhood, medical doctors regarded the condition as inadequate physical development of the proper sexual characteristics. Beginning hormone therapy with the husband of a classmate, Jorgensen traveled to Europe to have sex reassignment surgery which she completed in Denmark in 1951 and 1952. Jorgensen became an instant celebrity upon her return to the United States. Often an object of derisive humor, Jorgensen responded by adopting a glamorous and outgoing persona, quite different from her diffidence as a boy. Forbidden from marrying (her birth certificate indicated she was male), she nonetheless by her very existence demonstrated that gender was not a binary, incommensurate condition and that genitalia and chromosomes alone did not provide a completely solid foundation for identity.[@jorgensen2000; @meyerowitz2002]
 
@@ -87,22 +85,21 @@ Although most debate revolved around how the body determined identity, there wer
 
 
 
-Midcentury Americans were inveterate joiners. Such organizations as the Boy Scouts, Parent-Teachers Association and the League of Women Voters experienced tremendous growth from 1950 to 1960, virtually doubling during the period. Even some sales unfolded in a group environment. The much-derided Tupperware---plastic covered dishes intended to store leftovers ---was founded in 1948 and rose to cultural prominence and lucrative returns on the strength of its marketing through “Tupperware parties” of friends and neighbors. Many commentators complained about the pressure to belong and conform and the suspicion that attached to outsiders and loners. Yet observers also claimed the connections of bowling leagues and other civil society groups were particularly thin and unfulfilling. Americans, they observed, had no real connections and felt meaningless and alone. In many ways, these seemingly opposite complaints were two sides of the same coin, the inability American life to derive a productive relationship between individuals and society.[^29]
+Midcentury Americans were inveterate joiners. Such organizations as the Boy Scouts, Parent-Teachers Association and the League of Women Voters experienced tremendous growth from 1950 to 1960, virtually doubling during the period. Even some sales unfolded in a group environment. The much-derided Tupperware---plastic covered dishes intended to store leftovers ---was founded in 1948 and rose to cultural prominence and lucrative returns on the strength of its marketing through “Tupperware parties” of friends and neighbors. Many commentators complained about the pressure to belong and conform and the suspicion that attached to outsiders and loners. Yet observers also claimed the connections of bowling leagues and other civil society groups were particularly thin and unfulfilling. Americans, they observed, had no real connections and felt meaningless and alone. In many ways, these seemingly opposite complaints were two sides of the same coin, the inability American life to derive a productive relationship between individuals and society.
 
-[^29]: Membership statistics are from http://historyofscouting.com/history/history-1950.htm, accessed 05/27/2015 20:33 and http://historyofscouting.com/history/history-1950.htm.
+Although there is very little discussion of loneliness as the term is usually understood, David Riesman’s *Lonely Crowd* (1950) takes as its central problem the changing relationship of the self and others. Riesman developed an interest in sociology during his analysis with Erich Fromm. Originally, he and his associates Reuel Denney and Nathan Glazer set out to investigate apathy during the 1948 presidential election, but turned to a study of the history of character. What they found was that the United States was in the midst of a change in the predominant character type. During the pioneer stage of economic development, the modal American was inner directed. As the name suggests, the type acted in accord with an internalized code and took its identity from work accomplishments. With the rise of bureaucracy and mass communications, an emergent type -- the other directed -- gained traction. Other-directed people took their cues from social expectations and the reactions of their fellows and organized their self-conception around leisure and consumption. Where the inner-directed experienced guilt for violating the code, the other directed underwent anxiety over whether they would win approval.
 
-Although there is very little discussion of loneliness as the term is usually understood, David Riesman’s *Lonely Crowd* (1950) takes as its central problem the changing relationship of the self and others. Riesman developed an interest in sociology during his analysis with Erich Fromm. Originally, he and his associates Reuel Denney and Nathan Glazer set out to study apathy during the 1948 presidential election; the project morphed into a study of which abstract character type predominated at a given stage of the past. Where once the prevailing personality type was inner-directed, transformation in social organization --- particularly the rise of bureaucracy and mass communications --- gave rise to the other-directed type. Inner-directeds, as the name suggests, subscribed to values and followed a code of behavior she or he has internalized. In contrast, other-directed people took their cues from social expectations and the reactions of their fellows. Inner-directed folks gained identity primarily from work; outer-directeds organized their self-conception around leisure and consumption. The other directed lived lives filled with anxiety, as opposed to the inner-directed’s guilt.
+Many readers interpreted Riesman’s book as deploring the rise of the other-directed personality, which they saw as conformist, insecure, and dependent. They regarded his portrait of the inner-directed man as an elegy for a world in which assuredness and ambition were paramount. Work groups, many bemoaned, had no room for such people. A 1954 *Time* magazine cover reinforced the impression. It featured a man in a business suit with a radar transmitter on his back looking to the future and the Victorian figure with a compass moving back into the mists of the past while the faceless masses congregated behind the bespectacled Riesman, whom the story itself depicted as well-adjusted and social.[^28] Riesman denied he was simply lamenting the decline of nineteenth-century individualism or criticizing conformity as such. Riesman was clear that the issue was *how*, not whether, a society induces conformity. Nineteenth-century America did so through a similar internal code that resulted in envy and emulation among inner-directed strivers. Nor did he think the inner-directed personality was particularly admirable, pointing to its constricted and parochial nature. The inner-directed man may have had his internal code, but the circle of others whom he accepted was quite small and his inner censor could be unproductively unforgiving. Inner direction may have suited the class-conflict ridden stage of capitalism but was hardly the model for personal freedom in the modern age.[^29]
 
-Sparked by a cover story in *Time Magazine* on Riesman and the American character in 1954, many readers interpreted Riesman’s book as deploring the rise of the other-directed personality, which they saw as conformist, insecure, and dependent. They read into his portrait of the inner-directed man as self-contained, ambitious, and better at things than with people an elegy for a character type that no longer fit the new world of group work and human relations. Even as the story indicated how well adjusted and social Riesman himself was, the cover reinforced the lament interpretation. It featured a man in a business suit with a radar transmitter on his back looking to the future and the Victorian figure with a compass moving back into the mists of the past while the faceless masses congregated behind the bespectacled Riesman.[^30]
+Often ignored in the interpretation of the book was Riesman's consideration of the virtues of other-direction. The other-directed, he noted, conformed from an “greater resonance with others, a heightened self-consciousness about relations to people, and a widening of the circle with whom one wants to feel in touch.” The other-directed self was aware of others and had the capacity to be more empathetic, sensitive, tolerant, and flexible. Riesman contended that the other-directed were more prone to examining inner life and better suited to a world in which work had been so degraded that it could no longer contribute to a worthwhile identity.[^30]
 
-[^30]: For reception of *Lonely Crowd*, see Eric Larrabee, “David Riesman and His Readers,” in [@lipset1961, 404-16] and Wilfred M. McClay, “The strange career of *The Lonely Crowd*: or, the antimonies of autonomy" in [@haskell1993, p. 397-440] Barbara Ehrenreich gives the inner-other directed distinction a gendered reading in [@ehrenreich1983, p. 35]
+[^28]: Eric Larrabee, “David Riesman and His Readers,” in [@lipset1961, 404-16] and Wilfred M. McClay, “The strange career of *The Lonely Crowd*: or, the antimonies of autonomy" in [@haskell1993, p. 397-440]. [@ehrenreich1983, p. 35] makes a compelling case that concern over other-direction was also a concern about the feminization of the work force.
 
-Riesman denied he was simply lamenting the decline of nineteenth-century individualism or criticizing conformity as such. Riesman was clear that the issue was *how*, not whether, a society induces conformity. Nineteenth-century America did so through a similar internal code that resulted in envy and emulation among inner-directed strivers. The other-directed, he noted, conformed from an “greater resonance with others, a heightened self-consciousness about relations to people, and a widening of the circle with whom one wants to feel in touch.” Nor did he think the inner-directed personality was particularly admirable, pointing to its crabbed, constricted and parochial nature. The inner-directed man may have had his internal code, but the circle of others who were acceptable was quite small and his inner censor could be unproductively unforgiving. Inner direction may have suited the class-conflict ridden stage of capitalism but was hardly the model for personal freedom in the modern age.[^31]
+[^29]: David Riesman, *The Lonely Crowd: A Study of the Changing American Character* (New Haven: Yale University Press, 1952), xiv. See 13-6, 87-95, 109-125, 159-60 for a discussion of inner-direction.
 
-[^31]: David Riesman, *The Lonely Crowd: A Study of the Changing American Character* (New Haven: Yale University Press, 1952), xiv. See 13-6, 87-95, 109-125, 159-60 for a discussion of inner-direction. Other-directed is handled on 19-24 31-36, 96-108, 126-160.
+[^30]: Riesman addresses other-directed on 19-24 31-36, 96-108, 126-160.
 
-
-Yet Riesman hardly depicted the other-directed as models of meaningful and self-aware selfhood. Other-direction enabled insincere glad-handing and mood engineering designed to influence vaguely discomforted individuals uncertain about whether or not they fit in. Riesman's other-directed personality resembled Fromm’s marketing personality, who treated his self as if it were a commodity. Because they drew identity from consumption rather than work, other-directeds were especially vulnerable to swings in fashion. Like Arthur Miller’s Willie Loman in *Death of a Salesman* (1949), other-directeds were often convinced they had “sterling traits of character” and “a pleasing personality” and often found it difficult to face reality. Riesman did envision positive aspects to other-direction. The other-directed self was aware of others and had the capacity to be more empathetic, sensitive, tolerant, and flexible. Riesman contended that the other-directed were more prone to examining inner life and better suited to a world in which work had been so degraded that it could no longer contribute to a worthwhile identity. Since it was an emerging orientation, the other-directed heralded either a new openness or a therapeutic world view in which attention to one’s feelings trumped all other considerations.
+Yet there were grounds in *Lonely Crowd* for the lament interpretation, as Riesman later conceded in follow ups.[@riesman1954; @riesman1990; @mclaughlin2001] Other-direction enabled insincere glad-handing and mood engineering designed to influence vaguely discomforted individuals uncertain about whether or not they fit in. Because they drew identity from consumption rather than work, other-directeds were especially vulnerable to swings in fashion. Like Arthur Miller’s Willie Loman in *Death of a Salesman* (1949), other-directeds were often convinced they had “sterling traits of character” and “a pleasing personality” and often found it difficult to face reality. Riesman was aware as well that impression management could work its way from business to family and school and that an other-directed society could be characterized by "false personalization" in which the boundaries between the personal and the public erode, and widespread inauthenticity. Further investigations of coteries of college students revealed that those with group orientations did not reliably care about others' well being, as Riesman posited they would.
 
 The most tantalizing but least realized portion of the book was Riesman’s discussion of autonomy. Riesman believed that since the problem of production had been virtually solved, freedom was a psychosocial rather than a material challenge. Although Riesman had noted in a letter to Denney the possibility that in some circumstances alienation could be a legitimate response to a society that bore down too heavily on individuals, he ultimately tended to regard the condition as anomie, the breakdown of social connection and norms. More preferable was autonomy, which he conceded was relatively rare, especially in a regime of outer-direction. He envisioned autonomy achieved through membership in multiple communities, creative consumption by which he meant knowledgeable use of an item, and the ability to know and master one’s own desires. The details remained exceedingly vague. He did insist, however, that creativity amidst the general joylessness of modern life was essential. In response, Daniel Bell termed him a prophet of play who overemphasized the degree to which consumption yielded the kind of freedom that Riesman wanted. Indeed, by the late 1960s, Riesman worried that efforts to go one’s own way had become willful efforts to depart from norms for their own sake, as if eccentricity proved one was not other-directed.
 
