--- a/4R.md
+++ b/4R.md
@@ -127,19 +127,19 @@ Most unsympathetic commentators regarded Beats as conformist in their nonconform
 
 Beat spontaneity did not result in a consistent philosophy. More philosophically sophisticated in its consideration of the meaning and dilemmas of identity was existentialism. Although as historian George Cotkin has argued several strains of American thought had existential themes, the philosophy did not take hold until European versions arrived in mid-twentieth century. The thought of Soren Kierkegaard, introduced through the efforts of neo-Orthodox Episcopal minister, Walter Lowrie, led figures as diverse as Reinhold Niebuhr, Will Herberg, Whitaker Chambers, and Arthur Schlesinger, Junior to temper or reject their one-time expansive hopes for social transformation. Existentialism gathered steam with the New York intellectuals’ discovery and promotion of the French writers, Jean-Paul Sartre, Simone de Beauvoir and Albert Camus in the mid-1940s, but all three had unsatisfactory visits to United States. Their hosts criticized the existentialists for their flirtation with Marxism (Camus being an exception), shallow knowledge of Freud, and mass-media posturing. Nonetheless existentialism remained attractive as a philosophy of authenticity that enjoined individuals not to accept fate but instead create their identities as singular, unique beings. More than the pose of Greenwich Village coffeehouse habitués, existentialism proved a bracing challenge and support for those searching for an understanding of where they stood in the world. One sign of its success was the appearance of such academic efforts to provide meaningful genealogies and commentary as Hazel Barnes’s *The Literature of Possibility* (1957) and Walter Kaufmann’s *Existentialism From Dostoevsky to Sartre* (1956). By the mid-1960s, existentialism had profoundly affected the novelists Anne Rice and Marge Piercy, the feminist Roxanne Dunbar-Ortiz, and radicals Tom Hayden and Robert Moses, and, ironically, given their opposing sexual politics, Betty Friedan and Norman Mailer.[^38]
 
-[^38]:	George Cotkin, *Existential America* (Baltimore: Johns Hopkins University Press, 2003), 91-158; Hazel E. Barnes, *An Existentialist Ethics* (New York: Knopf, 1967); Hazel E. Barnes, *The Literature of Possibility: A Study in Humanistic Existentialism* (Lincoln: University of Nebraska Press, 1959); Walter Arnold Kaufmann, *Existentialism From Dostoevsky to Sartre* (New York: Meridian Books, 1956).
+[^38]:	George Cotkin, *Existential America* (Baltimore: Johns Hopkins University Press, 2003), 91-158; Hazel E. Barnes, *An Existentialist Ethics* (New York: Knopf, 1967); Hazel E. Barnes, *The Literature of Possibility: A Study in Humanistic Existentialism* (Lincoln: University of Nebraska Press, 1959); Walter Kaufmann, *Existentialism From Dostoevsky to Sartre* (New York: Meridian Books, 1956).
 
 Existentialism defined the human condition as strikingly individual. Though humans live in groups, our consciousness and our death were ours alone. Where determinisms wrongly subsumed particulars under abstract and ultimately meaningless concepts, existentialism stressed contingencies and countered that truths were made, not discovered. At the core of things was the necessity of human choice. It was the inescapability of making choices and creating an identity that gave meaning to the famous Sartrean aphorism that existence precedes essence.[^39] Many of those choices were crucial ones that could not be fudged and committed an individual to a particular course, “either/or” in the parlance rather than “both/and.” Even though the world was absurd in the sense that meaning was not given, having to make a choice conferred a seriousness to life and required individuals to assume responsibility for whom one was and whom one became. One could not evade the responsibility of choice even if one occupied a lowly social position or suffered through oppressive conditions. That was the nub of Camus's “Myth of Sisyphus.” Condemned to the absurdity of forever pushing a boulder up a mountain, Sisyphus nonetheless differed from the inhuman boulder because he retained the ability to deny fate and make deliberate choices about what he would do. Sartre labeled bad faith any denial of responsibility for one’s situation. It was inauthentic to simply shrug one’s shoulders and assert this is just the way I am. Borrowing from phenomenological discussion of consciousness, Sartre asserted resignation denied our awareness, however dim and distant, that we are always more than ourselves. Existentialists insisted there was no greater inauthenticity than accepting without passionate engagement and choice social conventions.[^40]
 
 [^39]: Jean Paul Sartre, "Existentialism is a Humanism," translated by Carol Macomber ; introduction by Annie Cohen-Solal ; notes and preface by Arlette Elkaïm-Sartre ; edited by John Kulka (New Haven: Yale University Press, [1945] 2007, vii )
 
-[^40]: [@camus1955][@sartre1967, p. 147-186] serves as primer for Sartre's views on bad faith.
+[^40]: [@camus1955]. [@sartre1967, p. 147-186] serves as primer for Sartre's views on bad faith.
 
 Although Sartre once wrote “hell is other people,” existentialists were wary of blithe libertarianism and the egoism of exclusive self regard. Having condemned the bad faith of acquiescing in a socially-imposed identity, existentialists also challenged the bad faith of pretending antecedent conditions had no effect whatsoever, as if all things were possible. One of those antecedent conditions that the French recognized was society itself. That recognition gave the politics of the existentialists social concerns. For de Beauvoir, authenticity required an open future which extends itself by opening the freedom of others. It also presented Sartre and de Beauvoir with the task of finding a way that the individual freedom of existentialism expounded in “Existentialism is Humanism” was in line with the social causation of Marxism. Sartre’s effort to weave together collective and individual action in *The Critique of Dialectical Reason* was at best only partially successful.
 
 The liberal Camus regarded the project as utopian politics because it treated class as an abstraction and justified positions on the grounds of historical necessity. Doing so necessarily drained values from political action and substituted revolutionary fervor for regard for others. Concerned to keep means and ends in balance, Camus opted for a reformist politics that accepted in some fashion the positions of others. That stance could flounder on the search for an unachievable middle position, as was the case with his untenable hope that the Algerian crisis could be resolved in a compromise that left French nationals in their unique place in the colony while honoring the desire of indigenous Algerians for independence. Camus nonetheless proved tremendously inspiring for Americans eager for a new politics that combined the individual authenticity of social opposition with an acceptance of legitimate social bonds. His influence could be found in such documents of the New Left as *The Port Huron Statement* and *Liberation* magazine. In the former's insistence that "The goal of man and society should be human independence: a concern not with image of popularity but with finding a meaning in life that is personally authentic; a quality of mind not compulsively driven by a sense of powerlessness, nor one which unthinkingly adopts status values, nor one which represses all threats to its habits, but one which has full, spontaneous access to present and past experiences, one which easily unites the fragmented parts of personal history, one which openly faces problems which are troubling and unresolved; one with an intuitive awareness of possibilities, an active sense of curiosity, an ability and willingness to learn," the Students for a Democratic Society made explicit its debt to Camus.[^41]
 
-[^41]: Students for a Democratic Society, *Port Huron Statement* (Chicago: Charles H. Kerr, [1962]1990 ), 11-12.
+[^41]: Students for a Democratic Society, *Port Huron Statement* (Chicago: Charles H. Kerr, [1962] 1990 ), 11-12.
 
 Worry over the legitimacy of social bonds accounted for the constant talk about alienation and the near ubiquity of the phrase “failure to communicate.” It surfaced as well in the widespread prominence of the theme of loneliness in postwar discourse. Artwork as diverse as Nicholas Ray’s *In a Lonely Place* (1950), Hank Williams’s “I’m So Lonesome I Could Cry” (1949), H. J. J. Straelen’s introduction to existentialism, *Man, the Lonely* (1952), Dorothy Day's autobiography, *The Long Loneliness* (1952), Chester Himes’s *Lonely Crusade* (1947), Margaret Wood’s social psychological exploration, *Paths to Loneliness* (1953), and Clark Moustakas’s psychological cum philosophical investigation of *Loneliness* (1961) raised the question of how to make meaningful connections in an age of impersonality. Such concerns testified to a new meaning for the word “lonely.” Previous generations had understood the term to mean feelings arising from being physically alone, the consequence of being friendless or losing a loved one. They regarded the condition as an inescapable part of life. After the war, the term also came to signify feelings of insufficient or unrewarding social connections, feelings that were liable to arise at any moment or with any interaction. Modern loneliness implied something askew in social relations or something lacking in the kinds of people produced by such relations. “Only connect,” E. M. Forester wrote in *Howard’s End* but many worried that connection was simply not possible in American life as currently constituted.
 
