Clean up First graph

--- a/4R.md
+++ b/4R.md
@@ -2,7 +2,7 @@
 
 ## The De-centered Search for the Centered Self
 
-  In his second novel, *Giovanni's Room* (1956), James Baldwin has his narrator-protagonist David muse on why he lit out suddenly for Europe. David did so, he reflects, for the peculiarly American reason that he “wanted to find myself.” He notes regards that phrase is neither current “in the language of any other people” and “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.”[@baldwin1956, p. 39]The sojourn to the Old World does little to render David’s desires, inclinations, and capacities legible or stable. Unable to accept his homosexual longings, particularly for the titular character whom he abandons after Giovanni's conviction for murder, David remains alienated from his reflection in the mirror, uncertain of “what moves in this body” and for “what this body is searching"(189).
+  In James Baldwin's second novel, *Giovanni's Room* (1956),  his narrator-protagonist David takes a moment to reflect  on why he suddenly lit out for Europe. He tentatively concludes that he did for the peculiarly American reason that he “wanted to find myself.” The phrase, David insists, is not current “in the language of any other people” and “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.”[@baldwin1956, p. 39] David's sojourn to the Old World does little to render his desires, inclinations, and capacities legible or stable. He remains unable to accept his homosexual longings, particularly for the titular character whom he abandons after Giovanni's conviction for murder, and is so alienated from himself that he is at the end startled by his reflection in the mirror and uncertain of “what moves in this body” and for “what this body is searching"(189).
 
 Contemporaries criticized both the novel's unapologetic treatment of homosexuality and its failure to chronicle black life. Charges of decadence and elitism obscured the book’s place in Baldwin’s career-long contention that whites’ demonization of blacks originated in the former’s inability to know themselves. Baldwin was far from alone in his belief that postwar American society made it difficult for Americans to know reliably who they were. Postwar commentators characteristically noted the presence of such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values.  For some the problem lay with the absence of meaningful communities and interpersonal relations brought on by modernity writ large. Others blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools, the media, and the isolation of suburban family life.[On alienation and isolation, see @josephson1962. For popular criticisms of suburbs, bureaucracy, and advertising respectively, see John Keats, *The Crack in the Picture Window* (Boston: Houghton Mifflin, 1957); @whyte1956; and  @packard1957.]
 
